[package]
name = "web_client"
version = "0.1.0"
authors = ["Liam Curry <liam@sagan.software>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wee_alloc"]

[dependencies]
cfg-if = "0.1.2"
wasm-bindgen = "0.2"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }
js-sys = "0.3.5"
wasm-bindgen-futures = "0.3.5"
futures = "0.1"
serde = "^1.0.59"
serde_json = "1.0"
serde_derive = "^1.0.59"
contract = { path = "../contract", default-features = false, features = ["web"] }
eosio = { path = "../../rust-eos/crates/eosio", default-features = false }
eosio_rpc = { path = "../../rust-eos/crates/eosio_rpc", features = ["use-web-sys"] }


[dependencies.web-sys]
version = "0.3.6"
features = [
  'console',
  'Document',
  'DocumentFragment',
  'Element',
  'Event',
  'EventTarget',
  'History',
  'HtmlElement',
  'HtmlInputElement',
  'Node',
  'Window',
  'Location',
]

[dev-dependencies]
wasm-bindgen-test = "0.2"
